--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (0.1.3) bionic; urgency=medium
+
+  * app-adjustments.sh: shortening wasta-remastersys CUSTOMISO label
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Fri, 19 Jan 2018 11:06:40 +0300
+
 wasta-multidesktop-bionic (0.1.2) bionic; urgency=medium
 
   * app-adjustments: adjust applets using jq instead of sed
