--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+wasta-multidesktop-bionic (0.2.0) bionic; urgency=medium
+
+  * wasta-login: manually syncing AccountsService user background
+    since change to lightdm 1.25/1.26 modifies how user backgrounds stored.
+    see: https://github.com/linuxmint/slick-greeter/issues/94
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Wed, 28 Feb 2018 10:51:59 +0300
+
 wasta-multidesktop-bionic (0.1.3) bionic; urgency=medium
 
   * app-adjustments.sh: shortening wasta-remastersys CUSTOMISO label
