--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
-wasta-multidesktop-bionic (0.2.1) UNRELEASED; urgency=medium
+wasta-multidesktop-bionic (0.2.2) bionic; urgency=medium
 
-  * app-adjustments: syntax fix on cinnamon panel-launchers adjustment
+  * debian/control: adding rename dependency
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Wed, 28 Feb 2018 21:08:18 +0300
+
+wasta-multidesktop-bionic (0.2.1) bionic; urgency=medium
+
+  * app-adjustments: syntax fix on cinnamon panel-launchers adjustment 
 
  -- Rik Shaw <rikshaw76@gmail.com>  Wed, 28 Feb 2018 19:38:53 +0300
 
