--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (0.2.3) bionic; urgency=medium
+
+  * app-adjustments: setting wasta-remastersys SLIDESHOW variable
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Sat, 03 Mar 2018 09:20:59 +0300
+
 wasta-multidesktop-bionic (0.2.2) bionic; urgency=medium
 
   * debian/control: adding rename dependency
