--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (0.2.4) xenial; urgency=medium
+
+  * plymouth wasta-text theme: updating to "18.04"
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Sat, 10 Mar 2018 15:17:30 +0300
+
 wasta-multidesktop-bionic (0.2.3) bionic; urgency=medium
 
   * app-adjustments: setting wasta-remastersys SLIDESHOW variable
