--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (0.3.0) bionic; urgency=medium
+
+  * wasta-login: if cinnamon then disable blueman
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Mon, 02 Apr 2018 10:42:22 +0300
+
 wasta-multidesktop-bionic (0.2.5) bionic; urgency=medium
 
   * app-adjustments: hiding:
