--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.0.3) bionic; urgency=medium
+
+  * change default launchers
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Sun, 02 Sep 2018 18:32:38 +0300
+
 wasta-multidesktop-bionic (1.0.2) bionic; urgency=medium
 
   * app-adjustments: remove wasta-remastersys settings (don't want to
