--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.0.7) bionic; urgency=medium
+
+  * app-adjustments: create /etc/skel/.config/zim if not present
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Mon, 03 Sep 2018 20:16:38 +0300
+
 wasta-multidesktop-bionic (1.0.6) bionic; urgency=medium
 
   * app-adjustments: prepend 'dbus-launch' to goldendict so that
