--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wasta-multidesktop-bionic (1.2.2) bionic; urgency=medium
+
+  * schemas: adding Wasta customized Gnome settings (wasta-core gives default
+    Ubuntu experience.
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Jan 2019 13:35:36 +0300
+
 wasta-multidesktop-bionic (1.2.1) bionic; urgency=medium
 
   * app-adjustments.sh: adding items to XFCE Settings Manager
