--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 wasta-multidesktop-bionic (1.2.3) UNRELEASED; urgency=medium
 
   * wasta-login.sh: correcting get and set xfce background
+    - killall dconf processes started at the end
 
  -- Rik Shaw <rikshaw76@gmail.com>  Wed, 09 Jan 2019 09:40:36 +0300
 
