--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.3.0) bionic; urgency=medium
+
+  * adding goldendict-dictionaries for standard goldendict dictionary location
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Fri, 29 Mar 2019 15:11:09 +0300
+
 wasta-multidesktop-bionic (1.2.21) bionic; urgency=medium
 
   * wasta-login.sh: if xfce active ensure gnome NOT drawing the desktop
