--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.3.1) bionic; urgency=medium
+
+  * app-adjustments.sh: correct goldendict paths
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Fri, 29 Mar 2019 16:05:12 +0300
+
 wasta-multidesktop-bionic (1.3.0) bionic; urgency=medium
 
   * adding goldendict-dictionaries for standard goldendict dictionary location
