--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.3.2) bionic; urgency=medium
+
+  * gschema-override: set gnome-terminal theme to 'dark'
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Tue, 20 Aug 2019 15:59:48 +0300
+
 wasta-multidesktop-bionic (1.3.1) bionic; urgency=medium
 
   * app-adjustments.sh: correct goldendict paths
