--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.3.4) bionic; urgency=medium
+
+  * app-adjustments.sh: cleanup way ibus and keyman added to cinnamon-settings
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Fri, 23 Aug 2019 14:02:12 +0300
+
 wasta-multidesktop-bionic (1.3.3) bionic; urgency=medium
 
   * app-adjustments.sh: apply arc-theme adjustments to arc-solid-theme
