--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.4.1) bionic; urgency=medium
+
+  * convert logo text to path for better scalability
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Tue, 24 Mar 2020 18:35:45 +0300
+
 wasta-multidesktop-bionic (1.4.0) bionic; urgency=medium
 
   * 18.04.4 release: updated logos
