--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.4.3) bionic; urgency=medium
+
+  * app-adjustments: account for gnome-packagekit
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Tue, 14 Apr 2020 14:02:50 -0500
+
 wasta-multidesktop-bionic (1.4.2) bionic; urgency=medium
 
   * updated plymouth logos
