--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.4.4) bionic; urgency=medium
+
+  * app-adjustments.sh: add "Software" to Synaptic so seachable
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Tue, 14 Apr 2020 17:14:59 -0500
+
 wasta-multidesktop-bionic (1.4.3) bionic; urgency=medium
 
   * app-adjustments: account for gnome-packagekit
