--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wasta-multidesktop-bionic (1.4.5) bionic; urgency=medium
+
+  * wasta-login.sh: adding wasta-gnome session
+
+ -- Rik Shaw <rikshaw76@gmail.com>  Thu, 30 Jul 2020 11:06:30 -0500
+
 wasta-multidesktop-bionic (1.4.4) bionic; urgency=medium
 
   * app-adjustments.sh: add "Software" to Synaptic so seachable
